fixing contactlist scrollbar

--- a/css/contacts.css
+++ b/css/contacts.css
@@ -1,10 +1,24 @@
-#contacts-content {
+#contacts-content .contacts-container {
     width: 456px;
+    max-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-y: auto;
+    position: relative;
 }
-#contacts-content button{
+
+#contacts-content .sticky-button-wrapper {
+    width: 100%;
+    background-color: white;
+    position: sticky;
+    top: 0;
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+}
+
+#contacts-content button {
     width: 357px;
     height: 56px;
     border: none;
@@ -16,55 +30,56 @@
     gap: 16px;
     font-size: 23px;
     margin: 32px 24px 16px 24px;
-    transition: background-color 0.3s, transform 0.3s; /* Fügt einen sanften Übergang hinzu */
+    transition: background-color 0.3s, transform 0.3s;
     cursor: pointer;
+    background-color: #4285f4;
 }
 
 #contacts-content button:hover {
-    background-color: #005dff; /* Farbe beim Hover */
+    background-color: #005dff;
     transform: scale(1.03);
 }
 
-#contacts-list {
+#contacts-content #contacts-list {
     width: 352px;
 }
 
-.contact-group {
+#contacts-content .contact-group {
     padding: 17px 36px;
     font-size: 18px;
-    border: none; 
+    border: none;
     border-bottom: 1px solid #D1D1D1;
 }
 
-.contact-group h2 {
+#contacts-content .contact-group h2 {
     font-size: 1.5rem;
     margin: 10px 0;
 }
-.contact-line {
+
+#contacts-content .contact-line {
     background-color: #D1D1D1;
     margin: 8px 0;
 }
 
-.contact-item {
+#contacts-content .contact-item {
     display: flex;
     align-items: center;
     padding: 15px 24px;
-    transition: background-color 0.3s, transform 0.3s; /* Fügt einen sanften Übergang hinzu */
+    transition: background-color 0.3s, transform 0.3s;
     cursor: pointer;
     border-radius: 10px;
 }
 
-.contact-item:hover {
-    background-color: #D2E3FF; /* Farbe beim Hover */
+#contacts-content .contact-item:hover {
+    background-color: #D2E3FF;
     transform: scale(1.03);
 }
 
-
-.avatar {
+#contacts-content .avatar {
     width: 42px;
     height: 42px;
     border-radius: 50%;
-    background-color: #4285f4; /* Default color */
+    background-color: #4285f4;
     color: white;
     border: solid 2px #FFFFFF;
     display: flex;
@@ -74,17 +89,17 @@
     margin-right: 24px;
 }
 
-.contact-details {
+#contacts-content .contact-details {
     display: flex;
     flex-direction: column;
     gap: 5px;
 }
 
-.contact-details .name {
+#contacts-content .contact-details .name {
     font-size: 19px;
 }
 
-.contact-details .email {
+#contacts-content .contact-details .email {
     font-size: 16px;
     color: #4589FF;
 }
